# Chipset.Engineering

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Chipset.Engineering config_default.launch  Chipset.Engineering.ioc  CubeFix.py  gen-after.bat
Core/App/PiSubmarine/Chipset/Engineering/: AppMain.cpp  AppMain.h  Batchg.cpp  Batchg.h  Batmon.cpp  Batmon.h  I2CDriver.h  Utils.h
Core/Inc/: lptim.h  main.h  stm32u0xx_hal_conf.h  stm32u0xx_it.h
Core/Src/: adc.c  dma.c  gpio.c  i2c.c  lptim.c  main.c  stm32u0xx_it.c  usart.c
